--- a/.github/workflows/prod_tritonlake-frontend.yml
+++ b/.github/workflows/prod_tritonlake-frontend.yml
@@ -22,6 +22,10 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build, and test
+        env:
+          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+          NEXT_PUBLIC_PLACES_API_KEY: ${{ secrets.NEXT_PUBLIC_PLACES_API_KEY }}
+          NEXT_PUBLIC_DOMAIN_NAME: ${{ secrets.NEXT_PUBLIC_DOMAIN_NAME }}
         run: |
           npm install
           npm run build --if-present
