--- a/.github/workflows/prod_tritonlake-frontend-2.yml
+++ b/.github/workflows/prod_tritonlake-frontend-2.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - tritonlake-frontend-2
 
 on:
@@ -22,18 +19,29 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build, and test
+        env:
+          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+          NEXT_PUBLIC_PLACES_API_KEY: ${{ secrets.NEXT_PUBLIC_PLACES_API_KEY }}
+          NEXT_PUBLIC_DOMAIN_NAME: ${{ secrets.NEXT_PUBLIC_DOMAIN_NAME }}
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Prepare deployment package
+        run: |
+          mkdir release
+          cp -R .next package.json package-lock.json public release/
+          cd release
+          zip -r ../release.zip .
+        working-directory: .
+
+      # - name: Zip artifact for deployment
+      #   run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: nextjs-app
           path: release.zip
 
   deploy:
@@ -49,10 +57,10 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: nextjs-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip release.zip -d app
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -67,5 +75,5 @@ jobs:
         with:
           app-name: 'tritonlake-frontend-2'
           slot-name: 'Production'
-          package: .
+          package: app
           
