--- a/.github/workflows/prod_tritonlake-frontend-2.yml
+++ b/.github/workflows/prod_tritonlake-frontend-2.yml
@@ -27,16 +27,16 @@ jobs:
           npm install
           npm run build --if-present
 
-      - name: Prepare deployment package
-        run: |
-          mkdir release
-          cp -R .next package.json package-lock.json public release/
-          cd release
-          zip -r ../release.zip .
-        working-directory: .
+      # - name: Prepare deployment package
+      #   run: |
+      #     mkdir release
+      #     cp -R .next package.json package-lock.json public release/
+      #     cd release
+      #     zip -r ../release.zip .
+      #   working-directory: .
 
-      # - name: Zip artifact for deployment
-      #   run: zip release.zip ./* -r
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -44,36 +44,54 @@ jobs:
           name: nextjs-app
           path: release.zip
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: nextjs-app
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip -d app
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_AB5CC244280D41649A4718CD94CDB972 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4DC9D6E3494943B6B6445F3DA0FDBC84 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_978699AF2EB1454FA2A002C4B1B7B799 }}
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'tritonlake-frontend-2'
-          slot-name: 'Production'
-          package: app
+          package: release.zip
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   environment:
+  #     name: 'Production'
+  #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  #   permissions:
+  #     id-token: write #This is required for requesting the JWT
+
+  #   steps:
+  #     - name: Download artifact from build job
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: nextjs-app
+
+  #     - name: Unzip artifact for deployment
+  #       run: unzip release.zip -d app
+      
+  #     - name: Login to Azure
+  #       uses: azure/login@v2
+  #       with:
+  #         client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_AB5CC244280D41649A4718CD94CDB972 }}
+  #         tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4DC9D6E3494943B6B6445F3DA0FDBC84 }}
+  #         subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_978699AF2EB1454FA2A002C4B1B7B799 }}
+
+  #     - name: 'Deploy to Azure Web App'
+  #       id: deploy-to-webapp
+  #       uses: azure/webapps-deploy@v3
+  #       with:
+  #         app-name: 'tritonlake-frontend-2'
+  #         slot-name: 'Production'
+  #         package: app
           
