--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,77 +1,77 @@
-name: Build and deploy Node.js app to Azure Web App - tritonlake-frontend-2
+# name: Build and deploy Node.js app to Azure Web App - tritonlake-frontend-2
 
-on:
-  push:
-    branches:
-      - prod
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - prod
+#   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
+#     steps:
+#       - uses: actions/checkout@v4
 
-#       - name: Set up Node.js version
-#         uses: actions/setup-node@v3
+# #       - name: Set up Node.js version
+# #         uses: actions/setup-node@v3
+# #         with:
+# #           node-version: '18.x'
+
+# #       - name: npm install, build, and test
+# #         env:
+# #           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+# #           NEXT_PUBLIC_PLACES_API_KEY: ${{ secrets.NEXT_PUBLIC_PLACES_API_KEY }}
+# #           NEXT_PUBLIC_DOMAIN_NAME: ${{ secrets.NEXT_PUBLIC_DOMAIN_NAME }}
+# #         run: |
+# #           npm install
+# #           npm run build --if-present
+
+# #       # - name: Prepare deployment package
+# #       #   run: |
+# #       #     mkdir release
+# #       #     cp -R .next package.json package-lock.json public release/
+# #       #     cd release
+# #       #     zip -r ../release.zip .
+# #       #   working-directory: .
+
+#       - name: Zip artifact for deployment
+#         run: zip release.zip ./* -r
+
+#       - name: Upload artifact for deployment job
+#         uses: actions/upload-artifact@v4
 #         with:
-#           node-version: '18.x'
+#           name: nextjs-app
+#           path: release.zip
 
-#       - name: npm install, build, and test
-#         env:
-#           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-#           NEXT_PUBLIC_PLACES_API_KEY: ${{ secrets.NEXT_PUBLIC_PLACES_API_KEY }}
-#           NEXT_PUBLIC_DOMAIN_NAME: ${{ secrets.NEXT_PUBLIC_DOMAIN_NAME }}
-#         run: |
-#           npm install
-#           npm run build --if-present
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     environment:
+#       name: 'Production'
+#       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+#     permissions:
+#       id-token: write #This is required for requesting the JWT
 
-#       # - name: Prepare deployment package
-#       #   run: |
-#       #     mkdir release
-#       #     cp -R .next package.json package-lock.json public release/
-#       #     cd release
-#       #     zip -r ../release.zip .
-#       #   working-directory: .
+#     steps:
+#       - name: Download artifact from build job
+#         uses: actions/download-artifact@v4
+#         with:
+#           name: nextjs-app
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+#       - name: Unzip artifact for deployment
+#         run: unzip release.zip -d app
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: nextjs-app
-          path: release.zip
+#       - name: Log in to Azure
+#         uses: azure/login@v2
+#         with:
+#           client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#         #   client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+#           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: nextjs-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip -d app
-
-      - name: Log in to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        #   client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Verify Azure Login
-        run: az account show
+#       - name: Verify Azure Login
+#         run: az account show
       
 #       - name: Login to Azure
 #         uses: azure/login@v2
@@ -90,29 +90,29 @@ jobs:
           
 
 
-# name: Azure Login Example
+name: Azure Login Example
 
-# on:
-#   push:
-#     branches:
-#       - prod
+on:
+  push:
+    branches:
+      - prod
 
-# jobs:
-#   login-to-azure:
-#     runs-on: ubuntu-latest
-#     permissions:
-#       id-token: write
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
+jobs:
+  login-to-azure:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    steps:
+    #   - name: Checkout code
+    #     uses: actions/checkout@v3
 
-#       - name: Log in to Azure
-#         uses: azure/login@v2
-#         with:
-#           client-id: ${{ secrets.AZURE_CLIENT_ID }}
-#           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-#           client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-#           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - name: Log in to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-#       - name: Verify Azure Login
-#         run: az account show
+      - name: Verify Azure Login
+        run: az account show
