--- a/.github/workflows/prod_frontend-cicd.yml
+++ b/.github/workflows/prod_frontend-cicd.yml
@@ -69,6 +69,8 @@ jobs:
         run: |
           az account show
           ls -la
+          cd app
+          az webapp deployment source config --name frontend-cicd --resource-group tritonlake-frontend-2_group --repo-url https://DhyeyB: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@github.com/DhyeyB/tritonlake-frontend.git --branch prod --manual-integration
 
       # - name: 'Deploy to Azure Web App'
       #   id: deploy-to-webapp
