--- a/.github/workflows/prod_frontend-cicd.yml
+++ b/.github/workflows/prod_frontend-cicd.yml
@@ -58,13 +58,17 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip -d app
 
-      - name: Log in to Azure
-        uses: azure/login@v2
+      # - name: Log in to Azure
+      #   uses: azure/login@v2
+      #   with:
+      #     client-id: ${{ secrets.AZURE_CLIENT_ID }}
+      #     tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      #     client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+      #     subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       
       # - name: Login to Azure
       #   uses: azure/login@v2
