--- a/.github/workflows/prod_frontend-cicd.yml
+++ b/.github/workflows/prod_frontend-cicd.yml
@@ -1,20 +1,20 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - frontend-cicd
+# name: Build and deploy Node.js app to Azure Web App - frontend-cicd
 
-on:
-  push:
-    branches:
-      - prod
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - prod
+#   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
+#     steps:
+#       - uses: actions/checkout@v4
 
       # - name: Set up Node.js version
       #   uses: actions/setup-node@v3
@@ -31,32 +31,32 @@ jobs:
       #     npm run build --if-present
       #     npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      # - name: Zip artifact for deployment
+      #   run: zip release.zip ./* -r
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: release.zip
+      # - name: Upload artifact for deployment job
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: node-app
+      #     path: release.zip
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   environment:
+  #     name: 'Production'
+  #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  #   permissions:
+  #     id-token: write #This is required for requesting the JWT
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
+  #   steps:
+  #     - name: Download artifact from build job
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: node-app
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip -d app
+  #     - name: Unzip artifact for deployment
+  #       run: unzip release.zip -d app
 
       # - name: Log in to Azure
       #   uses: azure/login@v2
@@ -66,9 +66,9 @@ jobs:
       #     client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
       #     subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # - uses: azure/login@v1
+      #   with:
+      #     creds: ${{ secrets.AZURE_CREDENTIALS }}
       
       # - name: Login to Azure
       #   uses: azure/login@v2
@@ -77,13 +77,13 @@ jobs:
       #     tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_ED634F07B9CC47598B0221B5EC07E0A2 }}
       #     subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5A43F4F977C24C8991F2AD312737DEC9 }}
 
-      - name: Verify Azure Login
-        run: |
-          az account show
-          ls -la
-          cd app
-          ls -la
-          az webapp deployment source config --name frontend-cicd --resource-group tritonlake-frontend-2_group --repo-url https://github.com/DhyeyB/tritonlake-frontend.git --branch prod --manual-integration
+      # - name: Verify Azure Login
+      #   run: |
+      #     az account show
+      #     ls -la
+      #     cd app
+      #     ls -la
+      #     az webapp deployment source config --name frontend-cicd --resource-group tritonlake-frontend-2_group --repo-url https://github.com/DhyeyB/tritonlake-frontend.git --branch prod --manual-integration
           
           
 
