--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,5 @@ jobs:
           ls -la
           cd app
           ls -la
-          az webapp deployment source config --name frontend-cicd --resource-group tritonlake-frontend-2_group --repo-url https://DhyeyB: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@github.com/DhyeyB/tritonlake-frontend.git --branch prod --manual-integration
+          az webapp deployment source config --name frontend-cicd --resource-group tritonlake-frontend-2_group --repo-url https://github.com/DhyeyB/tritonlake-frontend.git --branch prod --manual-integration
           
